--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="zh"  xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="common::head">
+<head>
+    <meta charset="utf-8" />
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/font-awesome.min.css" rel="stylesheet"/>
+    <link href="/css/bootstrap-tokenfield.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/markdown.css" />
+    <link rel="stylesheet" href="/css/editormd.min.css" />
 </head>
 <body>
 <header th:replace="common::header">
