--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -13,12 +13,10 @@
         <div class="articleFooter articleHead">
           <ul>
             <li><i class="fa fa-calendar fa-1x" aria-hidden="true"></i><span th:text="${ #dates.format(article.createdDate,'yyyy-MM-dd')}">)</span></li>
-            <li><i class="fa fa-eye" aria-hidden="true"></i><span th:text="${article.commentCount}"></span></li>
+            <li><i class="fa fa-eye" aria-hidden="true"></i><span th:text="${clickCount}"></span></li>
             <li><i class="fa fa-list fa-1x" aria-hidden="true"></i><span th:text="${article.category}"></span></li>
-            <li><i class="fa fa-tags fa-1x" aria-hidden="true"></i>
-              #foreach($tag in $tags)
-              <span>$!{tag.name}</span>
-              #end
+            <li th:each="tag:${tags}"><i class="fa fa-tags fa-1x" aria-hidden="true"></i>
+              <span th:text="${tag.name}">$!{tag.name}</span>
             </li>
           </ul>
         </div>
