--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -18,13 +18,13 @@
 
 <header th:fragment="header">
     <div class="row">
-    <div class="col-md-2 col-md-offset-1 row logo"><a href="/index">BlackBlog</a></div>
+    <div class="col-md-2 col-md-offset-1 row logo"><a th:href="@{/}">BlackBlog</a></div>
     <div class="col-md-5 col-md-offset-4 navigation">
         <ul class="row">
-            <li class="col-md-2"><a id="home" href="/index"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
+            <li class="col-md-2"><a id="home" th:href="@{/}"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
             <li class="col-md-2"><a id="project" href="/archive"><i class="fa fa-server" aria-hidden="true"></i>Archive</a></li>
             <li class="col-md-2"><a id="life" href="/about"><i class="fa fa-heart" aria-hidden="true"></i>About</a></li>
-            <li class="col-md-2"><a id="about" href="/links"><i class="fa fa-th-large" aria-hidden="true"></i>Links</a></li>
+            <li class="col-md-2"><a id="about" href="/userid"><i class="fa fa-user" aria-hidden="true"></i>User</a></li>
             <li th:if="${session.account!=null}" class="col-md-2"><a id="create" href="/create"><i class="fa fa-plus-circle" aria-hidden="true"></i></a></li>
         </ul>
     </div>
