--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -27,7 +27,7 @@
                     <option value="Other">其他</option>
                 </select>
             </div>
-            <div class="col-md-6"><label>Tag</label><input type="text" class="form-control" id="tag" name="tag" th:field="${tag}"></div>
+            <div class="col-md-6"><label>Tag</label><input type="text" class="form-control" id="tag" name="tag" th:value="${tag}" placeholder="多个标签用逗号隔开"></div>
         </div>
         <div class="describe option"><label>Describe</label><input type="text" class="form-control" id="describe" name="article.describe" th:field="${article.describes}"></div>
         <div class="option"><label>Content</label></div>
@@ -57,6 +57,13 @@
             saveHTMLToTextarea : true
         });
     });
+</script>
+<script th:inline="javascript">
+ var message = [[${message}]];
+ if(message=="保存成功"){
+     alert(message);
+ }
+
 </script>
 <footer>
     <div class="row">
